first attempt of simulation-feedback